--- a/index.html
+++ b/index.html
@@ -18,17 +18,16 @@ A:hover{color:red}
 <body bgcolor = black>
 
  
-<h1><font color="lawngreen">Numerical Methods in Thermal Engineering, Jul-Nov 2023</font></h1>
+<h1><font color="lawngreen">Fundamentals of Combustion, Jan-May 2024</font></h1>
 
 
 <h4><font color=magenta>Credits</font> 10 credits</h4>
 
 <h3><font color="magenta">Instructor</font></h3>
 Dr. Krithika Narayanaswamy</br>
-Dr. Pallab Sinha Mahapatra</br>
 
 <h3><font color="magenta">Mailing list</font></h3>
-You can find on google groups when you login via smail. Search for "NMTE_2023" or "nmte_2023-group@smail.iitm.ac.in". Click on it and request to be added to the group.
+You can find on google groups when you login via smail. Search for "FOC_2024" or "foc_2024-group@smail.iitm.ac.in". Click on it and request to be added to the group.
 
 <h3><font color=magenta>Exams and Grading</font></h3>
 <table border="2" width="400px">
