--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<title>NMTE_2023</title>
+<title>FOC_2024</title>
 <head>
 <style type="text/css">
 body{color:white}
@@ -21,89 +21,87 @@ A:hover{color:red}
 <h1><font color="lawngreen">Fundamentals of Combustion, Jan-May 2024</font></h1>
 
 
-<h4><font color=magenta>Credits</font> 10 credits</h4>
+<h3><font color=yellow>Credits</font> 9 credits</h3>
 
-<h3><font color="magenta">Instructor</font></h3>
+<h3><font color="yellow">Instructor</font></h3>
 Dr. Krithika Narayanaswamy</br>
+203 Thermodynamics and Combustion Engineering Laboratory</br>
+krithika@iitm.ac.in
 
-<h3><font color="magenta">Mailing list</font></h3>
+<h3><font color="yellow">Mailing list</font></h3>
 You can find on google groups when you login via smail. Search for "FOC_2024" or "foc_2024-group@smail.iitm.ac.in". Click on it and request to be added to the group.
 
-<h3><font color=magenta>Exams and Grading</font></h3>
+<h3><font color="yellow">Class information</font></h3>
+E-slot: 3 lecture hours per week <br>
+Tue 11 AM, Wed 10 AM, Fri 5 PM <br>
+<br>
+Venue: TDCE Seminar Hall <br>
+First class: 17th Jan 2024
+
+<h3><font color=yellow>Exams and Grading</font></h3>
 <table border="2" width="400px">
 <tbody><tr>
 	<td><b><font color=cyan>Evaluation</font></b></td>
 	<td><b><font color=cyan>Points</font></b></td>
 </tr>
 <tr>
-	<td>Quiz I</td>
-	<td> 15</td>
-</tr>
-<tr>
-	<td>Quiz II</td>
-	<td> 15</td>
-</tr>
-<tr>
-	<td>Assignments</td>
-	<td> 20</td>
-</tr>
-<tr>
-	<td>End Sem (Theory)</td>
+	<td>Mid Sem</td>
 	<td> 40</td>
 </tr>
 <tr>
-	<td>End Sem (Programming)</td>
+	<td>End Sem</td>
+	<td> 50 </td>
+</tr>
+<tr>
+	<td>Paper presentation</td>
 	<td> 10</td>
 </tr>
-
 </tbody>
 </table>
 
-
-<h3><font color="magenta">Short Syllabus</font></h3>
-
-Solution to Linear Algebraic Equations, Solution to Non-linear Algebraic Equations, Basics of finite difference method, Solution to Ordinary Differential Equations, Solution to Partial Differential Equations
 <br>
-<a href="https://github.com/krithikasivaram/NMTE_2023/blob/main/outline.pdf">Course outline</a>
+Note: Tutorials will be handed during the course covering the materials discussed in class. These will not be evaluated. However, about 25% of exams will be derived from tutorial sets.
+
+
+<h3><font color="yellow">Course contents</font></h3>
+<li>
+	Module 1: <br> Fuels and their properties, Review of basic thermodynamics and gaseous mixtures, Combustion Thermodynamics; Stoichiometry, I and II Laws of Thermodynamics applied to combustion - equilibrium composition
+</li>
+<br>
+<li>
+	Module 2: <br>
+	Fundamentals of combustion kinetics, Transport properties, Mass transfer - Stefan flow, droplet vaporization, Governing equations for a reacting flow
+</li>
+<br>
+<li>
+	Module 3: <br>
+	Non-premixed flames, premixed flames, limit phenomena - flammability limits, quenching of laminar flames, ignition, flame stabilization
+</li>
+<br>
+<li>
+	Module 4: <br>
+	Combustion of gaseous fuel jets, Turbulent premixed and non-premixed flames, Combustion of a carbon particle
+</li>
+<br>
 </p>
 
-<h3><font color="magenta">Suggested Textbooks</font></h3>
+<h3><font color="yellow">Suggested Textbooks</font></h3>
 <ul>
 <li>
-Matrix Computations – G. H. Golub, Johns Hopkins University Press
+An Introduction to Combustion Concepts and Applications by S.R. Turns, McGraw Hill 
 </li>
 <li>
-Numerical Recipes – W. H. Press et al.
+Principles of Combustion by Kenneth Kuo, John Wiley
 </li>
 <li>
-Numerical Solution of Partial Differential Equations: Finite Difference Methods – G. D. Smith, Oxford University Press, (1985)
+Combustion by Irvin Glassman, Academic Press
 </li>
 <li>
-Engineering numerical analysis – Parviz Moin (2nd edition, 2010), Cambridge University Press.
+Combustion Theory by F. A. Williams, ABP
 </li>
 <li>
-Introduction to Numerical Analysis – Kendall Atkinson 
+Understanding Combustion by H. S. Mukunda, Macmillan India • Combustion Physics by C. K. Law
 </li>
-<li>
-Numerical methods for scientists and engineers – J. Hoffman and S. Frankel, CRC Press 
-</li>
-<li>
-Numerical Mathematics and Computing – W. Cheney and D. Kincaid, International Thomson Publishing Company
-</li>
-<li>
-Applied Numerical Analysis – C. Gerald and P. Wheatley, Addison-Wesley 
-</li>
-<li>
-Analysis of Numerical Methods – E. Isaacson and H. B. Keller, John Wiley & Sons
-</li>
-<li>
-</ul>
-
-<h3><font color="magenta">Notes on selected topics</font></h3>
-<ul>
-<li>
-<a href="https://drive.google.com/file/d/1OM263gib9Vd8jJ40S3v5VzNOsPZ6dQqX/view?usp=sharing">Solvability Criteria</a>
-<li>
 </ul>
 
 </body></html>
