--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@ Note: Tutorials will be handed during the course covering the materials discusse
 <h3><font color="yellow">Suggested Textbooks</font></h3>
 <ul>
 <li>
+	Fundamentals of Engineering Thermodynamics by V. Babu
+</li>	
+<li>
 An Introduction to Combustion Concepts and Applications by S.R. Turns, McGraw Hill 
 </li>
 <li>
